# src/controllers/types/user-request.type.ts
@@ -1,0 +1,12 @@
+export interface ProductCreateRequest {
+    name: string;
+    category: string;
+    price: number;
+  }
+  
+  export interface ProductUpdateRequest {
+    name?: string;
+    category?: string;
+    price?: number;
+  }
+  
